- fix when only single/default configuration was used - added DBFS upload

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,7 +19,8 @@
             "skipFiles": [
                 "<node_internals>/**/*.js",
                 "${workspaceFolder}/node_modules/**/*.js",
-                "${workspaceFolder}/lib/**/*.js"
+                "main.js",
+                "extension.bundle.js"
             ]
         },
         {
@@ -35,7 +36,8 @@
             "skipFiles": [
                 "<node_internals>/**/*.js",
                 "${workspaceFolder}/node_modules/**/*.js",
-                "${workspaceFolder}/lib/**/*.js"
+                "main.js",
+                "extension.bundle.js"
             ]
         }
     ]
